GhostPDF - Log an error for fonts with bad Subtype values

Bug691872.pdf

The fonts have a /Subtype of '/' which is of course illegal. Doesn't
matter for pdfi which doesn't trust the subtype anyway but the old
interpreter raised a warning.